--- a/templates/components/client_info.html
+++ b/templates/components/client_info.html
@@ -80,18 +80,27 @@
           <option value="Parsi">Parsi</option>
         </select>
       </div>
-      <div class="col-md-6">
-        <label class="form-label">Profession</label>
-        <select class="form-select" name="profession">
-          <option value="">Select profession</option>
-          <option value="Salaried">Salaried</option>
-          <option value="Self-Employed">Self-Employed</option>
-          <option value="Business Owner">Business Owner</option>
-          <option value="Student">Student</option>
-          <option value="Retired">Retired</option>
-          <option value="Other">Other</option>
-        </select>
-      </div>
+<div class="col-md-6">
+  <label class="form-label">Occupation</label>
+  <select class="form-select" name="profession">
+    <option value="">Select occupation</option>
+    <option value="Architect / Interior Designer">Architect / Interior Designer</option>
+    <option value="Banker / Finance">Banker / Finance</option>
+    <option value="Doctor">Doctor</option>
+    <option value="Lawyer">Lawyer</option>
+    <option value="Chartered Accountant">Chartered Accountant</option>
+    <option value="Business Owner">Business Owner</option>
+    <option value="Corporate">Corporate</option>
+    <option value="Jeweler / Diamond / Gold">Jeweler / Diamond / Gold</option>
+    <option value="Real Estate">Real Estate</option>
+    <option value="Stock Market / Wealth Advisor">Stock Market / Wealth Advisor</option>
+    <option value="Film Industry">Film Industry</option>
+    <option value="Media / Marketing">Media / Marketing</option>
+    <option value="IT Industry">IT Industry</option>
+    <option value="Manufacturing">Manufacturing</option>
+    <option value="Government Services / Politician">Government Services / Politician</option>
+  </select>
+</div>
 
     </div>
   </div>
