--- a/templates/full_advanced_visit_logs.html
+++ b/templates/full_advanced_visit_logs.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <title>Advanced Visit Logs</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-
-<body>
+{% block content %}
     <div class="container mt-5">
         <h2 class="mb-4">Advanced Visit Logs Filter</h2>
 
@@ -258,6 +251,4 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-
-</html>
+{% endblock %}
