--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,20 +3,21 @@
 {% block content %}
 
 <div>
-  <a
-    href="{{ url_for('log_visit') }}"
-    class="btn {% if current_page == 'log_visit' %}btn-primary{% else %}btn-success{% endif %}"
-  >
+  <a href="{{ url_for('log_visit') }}"
+    class="btn {% if current_page == 'log_visit' %}btn-primary{% else %}btn-success{% endif %}">
     <i class="fas fa-plus me-2"></i>Add New Site Visit
   </a>
 </div>
 <br>
 <div class="row mb-4">
   <div class="col">
-    <div class="">
+    <div class="d-flex flex-wrap gap-3 justify-content-between">
       <h5 class="mb-0 text-black p-3">
         <i class="fas fa-filter me-2 text-black"></i>Filter Visit Logs
       </h5>
+      <a href="{{ url_for('full_filter_visit_logs') }}"
+        class="btn btn-primary m-1 text-black p-2">
+        <i class="fas fa-plus me-2"></i>Advanced Filter</a>
     </div>
     <div class="card">
       <div class="card-body">
@@ -59,18 +60,14 @@
             <input type="date" class="form-control" id="endDate" />
           </div>
           <div class="col-md-2 col-12 d-flex align-items-end flex-row flex-wrap gap-2 pt-3">
-            <button
-              class="btn btn-outline-secondary me-2 d-flex align-items-center flex-grow-1 flex-md-grow-0"
-              id="resetFilters"
-            >
+            <button class="btn btn-outline-secondary me-2 d-flex align-items-center flex-grow-1 flex-md-grow-0"
+              id="resetFilters">
               <i class="fas fa-refresh me-1"></i>Reset
             </button>
-            <button
-              class="btn btn-primary d-flex align-items-center flex-grow-1 flex-md-grow-0"
-              id="applyFilters"
-            >
+            <button class="btn btn-primary d-flex align-items-center flex-grow-1 flex-md-grow-0" id="applyFilters">
               <i class="fas fa-search me-1"></i>Apply
             </button>
+
           </div>
         </div>
       </div>
@@ -86,12 +83,8 @@
       <h5 class="mb-0 text-black">All Visit Logs</h5>
 
       <div class="d-flex align-items-center gap-2 flex-grow-1 flex-md-grow-0">
-        <input
-          type="text"
-          id="searchInput"
-          class="form-control form-control-sm"
-          placeholder="Search client name or mobile"
-        />
+        <input type="text" id="searchInput" class="form-control "
+          placeholder="Search client name or mobile" />
         <span class="badge bg-dark p-2" id="visitCount">Loading...</span>
       </div>
     </div>
@@ -197,15 +190,14 @@
     <a href="/visit/${visit.id}" class="btn btn-sm btn-outline-primary me-1">
         <i class="fas fa-eye me-1"></i>View
     </a>
-    ${
-      visit.can_delete
-        ? `
+    ${visit.can_delete
+              ? `
         <button class="btn btn-sm btn-outline-danger" onclick="deleteVisit(${visit.id})">
             <i class="fas fa-trash-alt me-1"></i>Delete
         </button>
     `
-        : ""
-    }
+              : ""
+            }
 </td>
 
                 `;
