--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -15,8 +15,7 @@
       <h5 class="mb-0 text-black p-3">
         <i class="fas fa-filter me-2 text-black"></i>Filter Visit Logs
       </h5>
-      <a href="{{ url_for('full_filter_visit_logs') }}"
-        class="btn btn-primary m-1 text-black p-2">
+      <a href="{{ url_for('full_filter_visit_logs') }}" class="btn btn-primary m-1 text-black p-2">
         <i class="fas fa-plus me-2"></i>Advanced Filter</a>
     </div>
     <div class="card">
@@ -46,11 +45,12 @@
             <label class="form-label">Project</label>
             <select class="form-select" id="projectFilter">
               <option value="">Select Project</option>
-              {% for project in projects %}
+              {% for project in projects|sort(attribute='name') %}
               <option value="{{ project.id }}">{{ project.name }}</option>
               {% endfor %}
             </select>
           </div>
+
           <div class="col-md-2 col-6 pt-3">
             <label class="form-label">Start Date</label>
             <input type="date" class="form-control" id="startDate" />
@@ -83,8 +83,7 @@
       <h5 class="mb-0 text-black">All Visit Logs</h5>
 
       <div class="d-flex align-items-center gap-2 flex-grow-1 flex-md-grow-0">
-        <input type="text" id="searchInput" class="form-control "
-          placeholder="Search client name or mobile" />
+        <input type="text" id="searchInput" class="form-control " placeholder="Search client name or mobile" />
         <span class="badge bg-dark p-2" id="visitCount">Loading...</span>
       </div>
     </div>
