--- a/templates/components/property_requirements.html
+++ b/templates/components/property_requirements.html
@@ -13,7 +13,8 @@
                     <option value="2BHK">2BHK</option>
                     <option value="3BHK">3BHK</option>
                     <option value="4BHK">4BHK</option>
-                    <option value="4+BHK">4+BHK</option>
+                    <option value="5BHK">5BHK</option>
+                    <option value="6BHK">6BHK</option>
                 </select>
             </div>
             <div class="col-md-6">
