--- a/templates/components/multiple_visits.html
+++ b/templates/components/multiple_visits.html
@@ -23,13 +23,24 @@
                         </div>
                         <div class="col-md-6">
                             <label class="form-label">Project *</label>
-                            <select class="form-select" name="visits[0][project_id]" required>
+                            <select class="form-select select2-project" name="visits[0][project_id]" required>
                                 <option value="">Select a project</option>
                                 {% for project in projects %}
                                 <option value="{{ project.id }}">{{ project.name }}</option>
                                 {% endfor %}
                             </select>
                         </div>
+
+                        <!-- Initialize Select2 for this dropdown -->
+                        <script>
+                            $(document).ready(function () {
+                                $('.select2-project').select2({
+                                    placeholder: "Select a project",
+                                    width: '100%'
+                                });
+                            });
+                        </script>
+
                         <div class="col-md-6">
                             <label class="form-label">Agents Involved</label>
                             <select class="form-select select2-visit" name="visits[0][agents_involved]" multiple>
