--- a/templates/components/property_requirements.html
+++ b/templates/components/property_requirements.html
@@ -9,6 +9,7 @@
                 <label class="form-label">BHK Requirement</label>
                 <select class="form-select" name="bhk_requirement">
                     <option value="">Select BHK requirement</option>
+                    <option value="Duplex">Duplex</option>
                     <option value="1BHK">1BHK</option>
                     <option value="2BHK">2BHK</option>
                     <option value="3BHK">3BHK</option>
